eips.tf
# Create Elastic IP
resource "aws_eip" "eip" {
  depends_on = [aws_internet_gateway.internet-gateway]
}
